# aem-analytics-dashboard

./: .replit  app.py  package-lock.json  package.json  pyproject.toml  replit.md
.streamlit/: config.toml
public/: index.html
public/attached_assets/: AEM (1)_1755355780712.xlsx
src/: App.jsx  index.js
src/components/: DashboardTab.jsx  DataTableTab.jsx  UploadTab.jsx
src/styles/: cognizant-theme.css
src/utils/: sampleDataLoader.js
styles/: cognizant_theme.py
utils/: data_processor.py  visualizations.py
